--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="src/weather.css" />
+    <link rel="stylesheet" href="src/styles.css" />
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
@@ -122,6 +122,6 @@
         </div>
       </div>
     </div>
-    <script src="src/weather.js"></script>
+    <script src="src/index.js"></script>
   </body>
 </html>
