--- a/index.html
+++ b/index.html
@@ -122,6 +122,10 @@
         </div>
       </div>
     </div>
+    <div>
+      <a href="https://github.com/dawe3799/Weather-App">Open-source code</a>by
+      Demi Awe
+    </div>
     <script src="src/index.js"></script>
   </body>
 </html>
