--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         </div>
       </div>
     </div>
-    <div>
+    <div class="footer">
       <a href="https://github.com/dawe3799/Weather-App">Open-source code</a>by
       Demi Awe
     </div>
