--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="src/styles.css" />
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
@@ -23,10 +22,13 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <link rel="stylesheet" href="src/styles.css" />
+
     <title>Weather App</title>
   </head>
   <body>
-    <div class="container rounded-4">
+    <!--<div class="container rounded-4">-->
+    <div class="body-app">
       <div class="cities">
         <ul>
           <li><a href="">New York</a></li>
@@ -73,11 +75,13 @@
         </ul>
         <div class="row view w-100">
           <div class="col-7 current">
-            <h1>
-              <span id="currentTemp"> </span>
-              <a href="#" id="celsius">°C </a> |
-              <a href="#" id="fahrenheit"> °F</a>
-            </h1>
+            <img
+              src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
+              alt="clear"
+            />
+            <span id="currentTemp"> </span>
+            <a href="#" id="celsius">°C </a> |
+            <a href="#" id="fahrenheit"> °F</a>
           </div>
 
           <div class="col-5">
@@ -123,8 +127,12 @@
       </div>
     </div>
     <div class="footer">
-      <a href="https://github.com/dawe3799/Weather-App">Open-source code</a> by
-      Demi Awe
+      <small>
+        <a href="https://github.com/dawe3799/Weather-App" target="_blank"
+          >Open-source code</a
+        >
+        by Demi Awe
+      </small>
     </div>
     <script src="src/index.js"></script>
   </body>
