--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="container">
       <div class="weather-app-wrapper">
         <div class="body-app">
-          <div class="cities">
+          <!-- <div class="cities">
             <ul>
               <li><a href="">New York</a></li>
               <li><a href="">Sydney</a></li>
@@ -67,7 +67,7 @@
                 </div>
               </div>
             </form>
-          </div>
+          </div>-->
           <!-- Content here -->
           <h1 id="current-city"></h1>
           <ul class="currentDay">
