--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </form>
           </div>-->
           <!-- Content here -->
-          <h1 id="current-city"></h1>
+          <h1 id="current-city">Kitchener</h1>
           <ul class="currentDay">
             <li id="today-date"></li>
             <li id="description"></li>
