--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                   class="float-left"
                 />
                 <div class="float-left">
-                  <strong><span id="currentTemp"> </span></strong>
+                  <strong><span id="currentTemp"> </span>12</strong>
                   <a href="#" id="celsius">°C </a> |
                   <a href="#" id="fahrenheit"> °F</a>
                 </div>
