--- a/index.html
+++ b/index.html
@@ -86,13 +86,15 @@
                 />
                 <div class="float-left">
                   <strong><span id="currentTemp"> </span>12</strong>
-                  <a href="#" id="celsius">°C </a> |
-                  <a href="#" id="fahrenheit"> °F</a>
+                  <span class="units">
+                    <a href="#" id="celsius">°C </a> |
+                    <a href="#" id="fahrenheit"> °F</a></span
+                  >
                 </div>
               </div>
             </div>
             <div class="col-6">
-              <ul class="conditions">
+              <ul>
                 <li>Humidity : <span id="humidity"></span>%</li>
                 <li>Precipitation : <span id="precipitation"></span>%</li>
                 <li>Wind : <span id="wind"></span> km/hr</li>
