--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           </div>
           <div class="row">
             <div class="col-6">
-              <div class="clearfix weather-temp">
+              <div class="weather-temp">
                 <img
                   src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
                   alt="clear"
