--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
              <div class="float-left">        
             <strong id="currentTemp"> </strong>
             <span class="units">
-            <a href="#" id="celsius">°C </a> |
+            <a href="#" id="celsius" class="active">°C </a> |
             <a href="#" id="fahrenheit"> °F</a>
             </span>
             </div>
