--- a/index.html
+++ b/index.html
@@ -72,32 +72,30 @@
         <ul>
           <li id="today-date"></li>
           <li id="description"></li>
-        </ul>
-        </div>
-        <div class="row">
-          <div class="col-6">
-            <div class="clearfix weather-temp">           
-            <img
+           <img
               src=""
               alt="Clear"
-              id="icon"             
-            />  
-             <div class="float-left">        
+              id="icon">
+        </ul>
+        </div>
+
+        <div class="row">
+           <div class="col-6 ">
+            <div class="weather-temp">
             <strong id="currentTemp"> </strong>
             <span class="units">
             <a href="#" id="celsius" class="active">°C </a> |
             <a href="#" id="fahrenheit"> °F</a>
             </span>
             </div>
-          </div>
- </div>
-          <div class="col-6">
-            <ul>
+            </div>
+            <div class="col-6 conditions">
+            <ul>                
               <li>Humidity : <span id="humidity"></span>%</li>
               <li>Precipitation : <span id="precipitation"></span>%</li>
               <li>Wind : <span id="wind"></span> km/hr</li>
             </ul>
-          </div>
+            </div>
         </div>
      
       <div class="row days">
