--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               <input
                 id="cityName"
                 type="text"
-                placeholder="Enter city name"
+                placeholder="Enter city name..."
                 class="form-control"
                 autofocus
               />
@@ -98,38 +98,8 @@
             </div>
         </div>
      
-      <div class="row days">
-        <div class="col-2">
-          <h5>Tuesday</h5>
-          <h1>🌧 <br />27°C</h1>
-          <h5>Sunny</h5>
-        </div>
-        <div class="col-2">
-          <h5>Wednesday</h5>
-          <h1>☀<br />11°C</h1>
-          <h5>Rainy</h5>
-        </div>
-        <div class="col-2">
-          <h5>Thursday</h5>
-          <h1>⛅ <br />15°C</h1>
-          <h5>Cloudy</h5>
-        </div>
-        <div class="col-2">
-          <h5>Friday</h5>
-          <h1>☀ <br />29°C</h1>
-          <h5>Sunny</h5>
-        </div>
-        <div class="col-2">
-          <h5>Saturday</h5>
-          <h1>⛈<br />2°C</h1>
-          <h5>Rainy</h5>
-        </div>
-        <div class="col-2">
-          <h5>Sunday</h5>
-          <h1>⛅ <br />13°C</h1>
-          <h5>Cloudy</h5>
-        </div>
-      </div>
+       <div class="weatherForecast" id="forecast"></div>
+
     </div>
     
      <small>
