--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
            <div class="col-6 ">
             <div class="weather-temp">
             <strong id="currentTemp"> </strong>
-            <span class="units">
-            <a href="#" id="celsius" class="active">°C </a> |
-            <!--<a href="#" id="fahrenheit"> °F</a>-->
-            </span>
+            <span class="units">°C </span>
+             <!-- <a href="#" id="celsius" class="active">|</a>
+            <a href="#" id="fahrenheit"> °F</a>-->
+           
             </div>
             </div>
             <div class="col-6 conditions">
