--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
            <div class="col-6 ">
             <div class="weather-temp">
             <strong id="currentTemp"> </strong>
-            <span class="units">°C </span>
+            <span class="units" id="celsius">°C </span>
                          <!-- <a href="#" id="celsius" class="active">|</a>
             <a href="#" id="fahrenheit"> °F</a>-->           
             </div>
